--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -50,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Game.x86_64"
+export_path="../../../Game.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -60,8 +60,8 @@ custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
 binary_format/embed_pck=false
-texture_format/bptc=false
+texture_format/bptc=true
 texture_format/s3tc=true
-texture_format/etc=false
+texture_format/etc=true
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
